<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/primero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uno" />

            <Button
                android:id="@+id/segundo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dos" />

            <Button
                android:id="@+id/tercero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tres" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/cuarto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuatro" />

            <Button
                android:id="@+id/quinto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cinco" />

            <Button
                android:id="@+id/sexto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seis" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/setimo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siete" />

            <Button
                android:id="@+id/octavo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ocho" />

            <Button
                android:id="@+id/noveno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blanco" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/ejecutar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Execute" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>